<resources>
    <string name="app_name">CardReader</string>
    <string name="action_settings">Settings</string>
    <string name="card_number">Card Number</string>
    <string name="verify">Verify</string>
    <string name="card_reader">Card Reader</string>
    <string name="scheme_network">SCHEME / NETWORK</string>
    <string name="country">COUNTRY</string>
    <string name="bank">BANK</string>
    <string name="brand">BRAND</string>
    <string name="scan_card">Scan Card</string>
</resources>
